# WordFrequenceCounter

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.cmake/api/v1/reply/: cache-v2-3e9b51de9a8d0b38b0b8.json  cmakeFiles-v1-415cda35d2a744fd9c25.json  codemodel-v2-ee474ce2f45ce79e7019.json  directory-src-Release-83279af0bc5e9f61a49c.json  index-2023-12-12T13-42-18-0545.json  target-freq-Lib-Release-27b14c935bd4c1c71c6c.json  target-freq-Release-f81b67d259f68f501b6b.json  target-freq_Benchmark-Release-ce67113b0b85ab48b6f7.json  target-freq_Tests-Release-1ec25db8b606e8890b7f.json
benchmark/: CMakeLists.txt  bmain.cpp
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  wfc_map.cpp  wfc_trie.cpp
src/lib/include/: wfc_map.h  wfc_trie.h
test/: CMakeLists.txt  TestChunks.h  test_wfc_map.cpp  test_wfc_trie.cpp
